Sheet6/y.output
Terminals which are not used

   Token_error
   Token_repeat
   Token_until


State 100 conflicts: 1 shift/reduce


Grammar

    0 $accept: start $end

    1 start: Token_program Token_identifier Token_semicolon varDec compStmt Token_dot

    2 varDec: Token_var varDecList
    3       | /* empty */

    4 varDecList: varDecList identListType Token_semicolon
    5           | identListType Token_semicolon

    6 identListType: identList Token_comma type

    7 identList: identList Token_colon Token_identifier
    8          | Token_identifier

    9 type: simpleType
   10     | Token_array Token_lRectBracket Token_integer Token_dot Token_dot Token_integer Token_lRectBracket Token_of simpleType

   11 simpleType: Token_Integer
   12           | Token_Real
   13           | Token_String

   14 compStmt: Token_begin stmtList Token_end

   15 stmtList: stmtList Token_semicolon statement
   16         | statement

   17 statement: assignStmt
   18          | compStmt
   19          | ifStmt
   20          | whileStmt
   21          | forStmt
   22          | Token_read Token_lBracket exprList Token_rBracket
   23          | Token_write Token_lBracket exprList Token_rBracket

   24 assignStmt: Token_identifier Token_assign expr
   25           | Token_identifier index Token_assign expr

   26 index: Token_lRectBracket expr Token_rRectBracket
   27      | Token_lRectBracket expr Token_dot Token_dot expr Token_rRectBracket

   28 ifStmt: Token_if expr Token_then statement elsePart

   29 elsePart: Token_else statement
   30         | /* empty */

   31 whileStmt: Token_while expr Token_do statement

   32 forStmt: Token_for Token_identifier Token_assign expr toPart expr Token_do statement

   33 toPart: Token_to
   34       | Token_downTo

   35 exprList: exprList Token_comma expr
   36         | expr

   37 expr: simpleExpr relOp simpleExpr
   38     | simpleExpr

   39 simpleExpr: simpleExpr addOp term
   40           | term

   41 term: term mulOp factor
   42     | factor

   43 factor: Token_integer
   44       | Token_real
   45       | Token_string
   46       | Token_false
   47       | Token_true
   48       | Token_identifier
   49       | Token_identifier index
   50       | Token_not factor
   51       | Token_sub factor
   52       | Token_lBracket expr Token_rBracket

   53 relOp: Token_less
   54      | Token_leq
   55      | Token_bigger
   56      | Token_beq
   57      | Token_eq
   58      | Token_noteq

   59 addOp: Token_add
   60      | Token_sub
   61      | Token_or

   62 mulOp: Token_mult
   63      | Token_divide
   64      | Token_div
   65      | Token_mod
   66      | Token_and


Terminals, with rules where they appear

$end (0) 0
error (256)
Token_add (258) 59
Token_and (259) 66
Token_array (260) 10
Token_assign (261) 24 25 32
Token_begin (262) 14
Token_beq (263) 56
Token_bigger (264) 55
Token_colon (265) 7
Token_comma (266) 6 35
Token_div (267) 64
Token_divide (268) 63
Token_do (269) 31 32
Token_dot (270) 1 10 27
Token_downTo (271) 34
Token_else (272) 29
Token_end (273) 14
Token_eq (274) 57
Token_error (275)
Token_false (276) 46
Token_for (277) 32
Token_identifier (278) 1 7 8 24 25 32 48 49
Token_if (279) 28
Token_Integer (280) 11
Token_integer (281) 10 43
Token_lBracket (282) 22 23 52
Token_leq (283) 54
Token_less (284) 53
Token_lRectBracket (285) 10 26 27
Token_mod (286) 65
Token_mult (287) 62
Token_not (288) 50
Token_noteq (289) 58
Token_of (290) 10
Token_or (291) 61
Token_program (292) 1
Token_rBracket (293) 22 23 52
Token_read (294) 22
Token_Real (295) 12
Token_real (296) 44
Token_repeat (297)
Token_rRectBracket (298) 26 27
Token_semicolon (299) 1 4 5 15
Token_String (300) 13
Token_string (301) 45
Token_sub (302) 51 60
Token_then (303) 28
Token_to (304) 33
Token_true (305) 47
Token_until (306)
Token_var (307) 2
Token_while (308) 31
Token_write (309) 23


Nonterminals, with rules where they appear

$accept (55)
    on left: 0
start (56)
    on left: 1, on right: 0
varDec (57)
    on left: 2 3, on right: 1
varDecList (58)
    on left: 4 5, on right: 2 4
identListType (59)
    on left: 6, on right: 4 5
identList (60)
    on left: 7 8, on right: 6 7
type (61)
    on left: 9 10, on right: 6
simpleType (62)
    on left: 11 12 13, on right: 9 10
compStmt (63)
    on left: 14, on right: 1 18
stmtList (64)
    on left: 15 16, on right: 14 15
statement (65)
    on left: 17 18 19 20 21 22 23, on right: 15 16 28 29 31 32
assignStmt (66)
    on left: 24 25, on right: 17
index (67)
    on left: 26 27, on right: 25 49
ifStmt (68)
    on left: 28, on right: 19
elsePart (69)
    on left: 29 30, on right: 28
whileStmt (70)
    on left: 31, on right: 20
forStmt (71)
    on left: 32, on right: 21
toPart (72)
    on left: 33 34, on right: 32
exprList (73)
    on left: 35 36, on right: 22 23 35
expr (74)
    on left: 37 38, on right: 24 25 26 27 28 31 32 35 36 52
simpleExpr (75)
    on left: 39 40, on right: 37 38 39
term (76)
    on left: 41 42, on right: 39 40 41
factor (77)
    on left: 43 44 45 46 47 48 49 50 51 52, on right: 41 42 50 51
relOp (78)
    on left: 53 54 55 56 57 58, on right: 37
addOp (79)
    on left: 59 60 61, on right: 39
mulOp (80)
    on left: 62 63 64 65 66, on right: 41


state 0

    0 $accept: . start $end

    Token_program  shift, and go to state 1

    start  go to state 2


state 1

    1 start: Token_program . Token_identifier Token_semicolon varDec compStmt Token_dot

    Token_identifier  shift, and go to state 3


state 2

    0 $accept: start . $end

    $end  shift, and go to state 4


state 3

    1 start: Token_program Token_identifier . Token_semicolon varDec compStmt Token_dot

    Token_semicolon  shift, and go to state 5


state 4

    0 $accept: start $end .

    $default  accept


state 5

    1 start: Token_program Token_identifier Token_semicolon . varDec compStmt Token_dot

    Token_var  shift, and go to state 6

    $default  reduce using rule 3 (varDec)

    varDec  go to state 7


state 6

    2 varDec: Token_var . varDecList

    Token_identifier  shift, and go to state 8

    varDecList     go to state 9
    identListType  go to state 10
    identList      go to state 11


state 7

    1 start: Token_program Token_identifier Token_semicolon varDec . compStmt Token_dot

    Token_begin  shift, and go to state 12

    compStmt  go to state 13


state 8

    8 identList: Token_identifier .

    $default  reduce using rule 8 (identList)


state 9

    2 varDec: Token_var varDecList .
    4 varDecList: varDecList . identListType Token_semicolon

    Token_identifier  shift, and go to state 8

    $default  reduce using rule 2 (varDec)

    identListType  go to state 14
    identList      go to state 11


state 10

    5 varDecList: identListType . Token_semicolon

    Token_semicolon  shift, and go to state 15


state 11

    6 identListType: identList . Token_comma type
    7 identList: identList . Token_colon Token_identifier

    Token_colon  shift, and go to state 16
    Token_comma  shift, and go to state 17


state 12

   14 compStmt: Token_begin . stmtList Token_end

    Token_begin       shift, and go to state 12
    Token_for         shift, and go to state 18
    Token_identifier  shift, and go to state 19
    Token_if          shift, and go to state 20
    Token_read        shift, and go to state 21
    Token_while       shift, and go to state 22
    Token_write       shift, and go to state 23

    compStmt    go to state 24
    stmtList    go to state 25
    statement   go to state 26
    assignStmt  go to state 27
    ifStmt      go to state 28
    whileStmt   go to state 29
    forStmt     go to state 30


state 13

    1 start: Token_program Token_identifier Token_semicolon varDec compStmt . Token_dot

    Token_dot  shift, and go to state 31


state 14

    4 varDecList: varDecList identListType . Token_semicolon

    Token_semicolon  shift, and go to state 32


state 15

    5 varDecList: identListType Token_semicolon .

    $default  reduce using rule 5 (varDecList)


state 16

    7 identList: identList Token_colon . Token_identifier

    Token_identifier  shift, and go to state 33


state 17

    6 identListType: identList Token_comma . type

    Token_array    shift, and go to state 34
    Token_Integer  shift, and go to state 35
    Token_Real     shift, and go to state 36
    Token_String   shift, and go to state 37

    type        go to state 38
    simpleType  go to state 39


state 18

   32 forStmt: Token_for . Token_identifier Token_assign expr toPart expr Token_do statement

    Token_identifier  shift, and go to state 40


state 19

   24 assignStmt: Token_identifier . Token_assign expr
   25           | Token_identifier . index Token_assign expr

    Token_assign        shift, and go to state 41
    Token_lRectBracket  shift, and go to state 42

    index  go to state 43


state 20

   28 ifStmt: Token_if . expr Token_then statement elsePart

    Token_false       shift, and go to state 44
    Token_identifier  shift, and go to state 45
    Token_integer     shift, and go to state 46
    Token_lBracket    shift, and go to state 47
    Token_not         shift, and go to state 48
    Token_real        shift, and go to state 49
    Token_string      shift, and go to state 50
    Token_sub         shift, and go to state 51
    Token_true        shift, and go to state 52

    expr        go to state 53
    simpleExpr  go to state 54
    term        go to state 55
    factor      go to state 56


state 21

   22 statement: Token_read . Token_lBracket exprList Token_rBracket

    Token_lBracket  shift, and go to state 57


state 22

   31 whileStmt: Token_while . expr Token_do statement

    Token_false       shift, and go to state 44
    Token_identifier  shift, and go to state 45
    Token_integer     shift, and go to state 46
    Token_lBracket    shift, and go to state 47
    Token_not         shift, and go to state 48
    Token_real        shift, and go to state 49
    Token_string      shift, and go to state 50
    Token_sub         shift, and go to state 51
    Token_true        shift, and go to state 52

    expr        go to state 58
    simpleExpr  go to state 54
    term        go to state 55
    factor      go to state 56


state 23

   23 statement: Token_write . Token_lBracket exprList Token_rBracket

    Token_lBracket  shift, and go to state 59


state 24

   18 statement: compStmt .

    $default  reduce using rule 18 (statement)


state 25

   14 compStmt: Token_begin stmtList . Token_end
   15 stmtList: stmtList . Token_semicolon statement

    Token_end        shift, and go to state 60
    Token_semicolon  shift, and go to state 61


state 26

   16 stmtList: statement .

    $default  reduce using rule 16 (stmtList)


state 27

   17 statement: assignStmt .

    $default  reduce using rule 17 (statement)


state 28

   19 statement: ifStmt .

    $default  reduce using rule 19 (statement)


state 29

   20 statement: whileStmt .

    $default  reduce using rule 20 (statement)


state 30

   21 statement: forStmt .

    $default  reduce using rule 21 (statement)


state 31

    1 start: Token_program Token_identifier Token_semicolon varDec compStmt Token_dot .

    $default  reduce using rule 1 (start)


state 32

    4 varDecList: varDecList identListType Token_semicolon .

    $default  reduce using rule 4 (varDecList)


state 33

    7 identList: identList Token_colon Token_identifier .

    $default  reduce using rule 7 (identList)


state 34

   10 type: Token_array . Token_lRectBracket Token_integer Token_dot Token_dot Token_integer Token_lRectBracket Token_of simpleType

    Token_lRectBracket  shift, and go to state 62


state 35

   11 simpleType: Token_Integer .

    $default  reduce using rule 11 (simpleType)


state 36

   12 simpleType: Token_Real .

    $default  reduce using rule 12 (simpleType)


state 37

   13 simpleType: Token_String .

    $default  reduce using rule 13 (simpleType)


state 38

    6 identListType: identList Token_comma type .

    $default  reduce using rule 6 (identListType)


state 39

    9 type: simpleType .

    $default  reduce using rule 9 (type)


state 40

   32 forStmt: Token_for Token_identifier . Token_assign expr toPart expr Token_do statement

    Token_assign  shift, and go to state 63


state 41

   24 assignStmt: Token_identifier Token_assign . expr

    Token_false       shift, and go to state 44
    Token_identifier  shift, and go to state 45
    Token_integer     shift, and go to state 46
    Token_lBracket    shift, and go to state 47
    Token_not         shift, and go to state 48
    Token_real        shift, and go to state 49
    Token_string      shift, and go to state 50
    Token_sub         shift, and go to state 51
    Token_true        shift, and go to state 52

    expr        go to state 64
    simpleExpr  go to state 54
    term        go to state 55
    factor      go to state 56


state 42

   26 index: Token_lRectBracket . expr Token_rRectBracket
   27      | Token_lRectBracket . expr Token_dot Token_dot expr Token_rRectBracket

    Token_false       shift, and go to state 44
    Token_identifier  shift, and go to state 45
    Token_integer     shift, and go to state 46
    Token_lBracket    shift, and go to state 47
    Token_not         shift, and go to state 48
    Token_real        shift, and go to state 49
    Token_string      shift, and go to state 50
    Token_sub         shift, and go to state 51
    Token_true        shift, and go to state 52

    expr        go to state 65
    simpleExpr  go to state 54
    term        go to state 55
    factor      go to state 56


state 43

   25 assignStmt: Token_identifier index . Token_assign expr

    Token_assign  shift, and go to state 66


state 44

   46 factor: Token_false .

    $default  reduce using rule 46 (factor)


state 45

   48 factor: Token_identifier .
   49       | Token_identifier . index

    Token_lRectBracket  shift, and go to state 42

    $default  reduce using rule 48 (factor)

    index  go to state 67


state 46

   43 factor: Token_integer .

    $default  reduce using rule 43 (factor)


state 47

   52 factor: Token_lBracket . expr Token_rBracket

    Token_false       shift, and go to state 44
    Token_identifier  shift, and go to state 45
    Token_integer     shift, and go to state 46
    Token_lBracket    shift, and go to state 47
    Token_not         shift, and go to state 48
    Token_real        shift, and go to state 49
    Token_string      shift, and go to state 50
    Token_sub         shift, and go to state 51
    Token_true        shift, and go to state 52

    expr        go to state 68
    simpleExpr  go to state 54
    term        go to state 55
    factor      go to state 56


state 48

   50 factor: Token_not . factor

    Token_false       shift, and go to state 44
    Token_identifier  shift, and go to state 45
    Token_integer     shift, and go to state 46
    Token_lBracket    shift, and go to state 47
    Token_not         shift, and go to state 48
    Token_real        shift, and go to state 49
    Token_string      shift, and go to state 50
    Token_sub         shift, and go to state 51
    Token_true        shift, and go to state 52

    factor  go to state 69


state 49

   44 factor: Token_real .

    $default  reduce using rule 44 (factor)


state 50

   45 factor: Token_string .

    $default  reduce using rule 45 (factor)


state 51

   51 factor: Token_sub . factor

    Token_false       shift, and go to state 44
    Token_identifier  shift, and go to state 45
    Token_integer     shift, and go to state 46
    Token_lBracket    shift, and go to state 47
    Token_not         shift, and go to state 48
    Token_real        shift, and go to state 49
    Token_string      shift, and go to state 50
    Token_sub         shift, and go to state 51
    Token_true        shift, and go to state 52

    factor  go to state 70


state 52

   47 factor: Token_true .

    $default  reduce using rule 47 (factor)


state 53

   28 ifStmt: Token_if expr . Token_then statement elsePart

    Token_then  shift, and go to state 71


state 54

   37 expr: simpleExpr . relOp simpleExpr
   38     | simpleExpr .
   39 simpleExpr: simpleExpr . addOp term

    Token_add     shift, and go to state 72
    Token_beq     shift, and go to state 73
    Token_bigger  shift, and go to state 74
    Token_eq      shift, and go to state 75
    Token_leq     shift, and go to state 76
    Token_less    shift, and go to state 77
    Token_noteq   shift, and go to state 78
    Token_or      shift, and go to state 79
    Token_sub     shift, and go to state 80

    $default  reduce using rule 38 (expr)

    relOp  go to state 81
    addOp  go to state 82


state 55

   40 simpleExpr: term .
   41 term: term . mulOp factor

    Token_and     shift, and go to state 83
    Token_div     shift, and go to state 84
    Token_divide  shift, and go to state 85
    Token_mod     shift, and go to state 86
    Token_mult    shift, and go to state 87

    $default  reduce using rule 40 (simpleExpr)

    mulOp  go to state 88


state 56

   42 term: factor .

    $default  reduce using rule 42 (term)


state 57

   22 statement: Token_read Token_lBracket . exprList Token_rBracket

    Token_false       shift, and go to state 44
    Token_identifier  shift, and go to state 45
    Token_integer     shift, and go to state 46
    Token_lBracket    shift, and go to state 47
    Token_not         shift, and go to state 48
    Token_real        shift, and go to state 49
    Token_string      shift, and go to state 50
    Token_sub         shift, and go to state 51
    Token_true        shift, and go to state 52

    exprList    go to state 89
    expr        go to state 90
    simpleExpr  go to state 54
    term        go to state 55
    factor      go to state 56


state 58

   31 whileStmt: Token_while expr . Token_do statement

    Token_do  shift, and go to state 91


state 59

   23 statement: Token_write Token_lBracket . exprList Token_rBracket

    Token_false       shift, and go to state 44
    Token_identifier  shift, and go to state 45
    Token_integer     shift, and go to state 46
    Token_lBracket    shift, and go to state 47
    Token_not         shift, and go to state 48
    Token_real        shift, and go to state 49
    Token_string      shift, and go to state 50
    Token_sub         shift, and go to state 51
    Token_true        shift, and go to state 52

    exprList    go to state 92
    expr        go to state 90
    simpleExpr  go to state 54
    term        go to state 55
    factor      go to state 56


state 60

   14 compStmt: Token_begin stmtList Token_end .

    $default  reduce using rule 14 (compStmt)


state 61

   15 stmtList: stmtList Token_semicolon . statement

    Token_begin       shift, and go to state 12
    Token_for         shift, and go to state 18
    Token_identifier  shift, and go to state 19
    Token_if          shift, and go to state 20
    Token_read        shift, and go to state 21
    Token_while       shift, and go to state 22
    Token_write       shift, and go to state 23

    compStmt    go to state 24
    statement   go to state 93
    assignStmt  go to state 27
    ifStmt      go to state 28
    whileStmt   go to state 29
    forStmt     go to state 30


state 62

   10 type: Token_array Token_lRectBracket . Token_integer Token_dot Token_dot Token_integer Token_lRectBracket Token_of simpleType

    Token_integer  shift, and go to state 94


state 63

   32 forStmt: Token_for Token_identifier Token_assign . expr toPart expr Token_do statement

    Token_false       shift, and go to state 44
    Token_identifier  shift, and go to state 45
    Token_integer     shift, and go to state 46
    Token_lBracket    shift, and go to state 47
    Token_not         shift, and go to state 48
    Token_real        shift, and go to state 49
    Token_string      shift, and go to state 50
    Token_sub         shift, and go to state 51
    Token_true        shift, and go to state 52

    expr        go to state 95
    simpleExpr  go to state 54
    term        go to state 55
    factor      go to state 56


state 64

   24 assignStmt: Token_identifier Token_assign expr .

    $default  reduce using rule 24 (assignStmt)


state 65

   26 index: Token_lRectBracket expr . Token_rRectBracket
   27      | Token_lRectBracket expr . Token_dot Token_dot expr Token_rRectBracket

    Token_dot           shift, and go to state 96
    Token_rRectBracket  shift, and go to state 97


state 66

   25 assignStmt: Token_identifier index Token_assign . expr

    Token_false       shift, and go to state 44
    Token_identifier  shift, and go to state 45
    Token_integer     shift, and go to state 46
    Token_lBracket    shift, and go to state 47
    Token_not         shift, and go to state 48
    Token_real        shift, and go to state 49
    Token_string      shift, and go to state 50
    Token_sub         shift, and go to state 51
    Token_true        shift, and go to state 52

    expr        go to state 98
    simpleExpr  go to state 54
    term        go to state 55
    factor      go to state 56


state 67

   49 factor: Token_identifier index .

    $default  reduce using rule 49 (factor)


state 68

   52 factor: Token_lBracket expr . Token_rBracket

    Token_rBracket  shift, and go to state 99


state 69

   50 factor: Token_not factor .

    $default  reduce using rule 50 (factor)


state 70

   51 factor: Token_sub factor .

    $default  reduce using rule 51 (factor)


state 71

   28 ifStmt: Token_if expr Token_then . statement elsePart

    Token_begin       shift, and go to state 12
    Token_for         shift, and go to state 18
    Token_identifier  shift, and go to state 19
    Token_if          shift, and go to state 20
    Token_read        shift, and go to state 21
    Token_while       shift, and go to state 22
    Token_write       shift, and go to state 23

    compStmt    go to state 24
    statement   go to state 100
    assignStmt  go to state 27
    ifStmt      go to state 28
    whileStmt   go to state 29
    forStmt     go to state 30


state 72

   59 addOp: Token_add .

    $default  reduce using rule 59 (addOp)


state 73

   56 relOp: Token_beq .

    $default  reduce using rule 56 (relOp)


state 74

   55 relOp: Token_bigger .

    $default  reduce using rule 55 (relOp)


state 75

   57 relOp: Token_eq .

    $default  reduce using rule 57 (relOp)


state 76

   54 relOp: Token_leq .

    $default  reduce using rule 54 (relOp)


state 77

   53 relOp: Token_less .

    $default  reduce using rule 53 (relOp)


state 78

   58 relOp: Token_noteq .

    $default  reduce using rule 58 (relOp)


state 79

   61 addOp: Token_or .

    $default  reduce using rule 61 (addOp)


state 80

   60 addOp: Token_sub .

    $default  reduce using rule 60 (addOp)


state 81

   37 expr: simpleExpr relOp . simpleExpr

    Token_false       shift, and go to state 44
    Token_identifier  shift, and go to state 45
    Token_integer     shift, and go to state 46
    Token_lBracket    shift, and go to state 47
    Token_not         shift, and go to state 48
    Token_real        shift, and go to state 49
    Token_string      shift, and go to state 50
    Token_sub         shift, and go to state 51
    Token_true        shift, and go to state 52

    simpleExpr  go to state 101
    term        go to state 55
    factor      go to state 56


state 82

   39 simpleExpr: simpleExpr addOp . term

    Token_false       shift, and go to state 44
    Token_identifier  shift, and go to state 45
    Token_integer     shift, and go to state 46
    Token_lBracket    shift, and go to state 47
    Token_not         shift, and go to state 48
    Token_real        shift, and go to state 49
    Token_string      shift, and go to state 50
    Token_sub         shift, and go to state 51
    Token_true        shift, and go to state 52

    term    go to state 102
    factor  go to state 56


state 83

   66 mulOp: Token_and .

    $default  reduce using rule 66 (mulOp)


state 84

   64 mulOp: Token_div .

    $default  reduce using rule 64 (mulOp)


state 85

   63 mulOp: Token_divide .

    $default  reduce using rule 63 (mulOp)


state 86

   65 mulOp: Token_mod .

    $default  reduce using rule 65 (mulOp)


state 87

   62 mulOp: Token_mult .

    $default  reduce using rule 62 (mulOp)


state 88

   41 term: term mulOp . factor

    Token_false       shift, and go to state 44
    Token_identifier  shift, and go to state 45
    Token_integer     shift, and go to state 46
    Token_lBracket    shift, and go to state 47
    Token_not         shift, and go to state 48
    Token_real        shift, and go to state 49
    Token_string      shift, and go to state 50
    Token_sub         shift, and go to state 51
    Token_true        shift, and go to state 52

    factor  go to state 103


state 89

   22 statement: Token_read Token_lBracket exprList . Token_rBracket
   35 exprList: exprList . Token_comma expr

    Token_comma     shift, and go to state 104
    Token_rBracket  shift, and go to state 105


state 90

   36 exprList: expr .

    $default  reduce using rule 36 (exprList)


state 91

   31 whileStmt: Token_while expr Token_do . statement

    Token_begin       shift, and go to state 12
    Token_for         shift, and go to state 18
    Token_identifier  shift, and go to state 19
    Token_if          shift, and go to state 20
    Token_read        shift, and go to state 21
    Token_while       shift, and go to state 22
    Token_write       shift, and go to state 23

    compStmt    go to state 24
    statement   go to state 106
    assignStmt  go to state 27
    ifStmt      go to state 28
    whileStmt   go to state 29
    forStmt     go to state 30


state 92

   23 statement: Token_write Token_lBracket exprList . Token_rBracket
   35 exprList: exprList . Token_comma expr

    Token_comma     shift, and go to state 104
    Token_rBracket  shift, and go to state 107


state 93

   15 stmtList: stmtList Token_semicolon statement .

    $default  reduce using rule 15 (stmtList)


state 94

   10 type: Token_array Token_lRectBracket Token_integer . Token_dot Token_dot Token_integer Token_lRectBracket Token_of simpleType

    Token_dot  shift, and go to state 108


state 95

   32 forStmt: Token_for Token_identifier Token_assign expr . toPart expr Token_do statement

    Token_downTo  shift, and go to state 109
    Token_to      shift, and go to state 110

    toPart  go to state 111


state 96

   27 index: Token_lRectBracket expr Token_dot . Token_dot expr Token_rRectBracket

    Token_dot  shift, and go to state 112


state 97

   26 index: Token_lRectBracket expr Token_rRectBracket .

    $default  reduce using rule 26 (index)


state 98

   25 assignStmt: Token_identifier index Token_assign expr .

    $default  reduce using rule 25 (assignStmt)


state 99

   52 factor: Token_lBracket expr Token_rBracket .

    $default  reduce using rule 52 (factor)


state 100

   28 ifStmt: Token_if expr Token_then statement . elsePart

    Token_else  shift, and go to state 113

    Token_else  [reduce using rule 30 (elsePart)]
    $default    reduce using rule 30 (elsePart)

    elsePart  go to state 114


state 101

   37 expr: simpleExpr relOp simpleExpr .
   39 simpleExpr: simpleExpr . addOp term
